--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "jsdom": "^24.1.1",
     "lucide-react": "^0.475.0",
+    "mathjs": "^13.0.3",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -56,6 +58,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
