--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
   },
@@ -79,6 +80,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
